# lgdnet-lca-eq

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: lgdnet_lca_eq.yaml
data/lca_eq/: README.md  events.csv
data/lca_eq/aoi/: README.md  event_aoi_metadata.csv
data/lca_eq/aoi_footprints/: README.md
data/lca_eq/crop_grids/: README.md
data/lca_eq/labels/: README.md
data/lca_eq/metadata/: events.csv
data/lca_eq/splits/: event_splits.csv  test_events.txt  train_events.txt  val_events.txt  val_manifest.csv
data/lca_eq/splits/paper_scene_split/: test.csv  train.csv  val.csv
docs/: data_card.md  paper_summary.md
experiments/: EXPERIMENT_LOG_LGDNet.md
scripts/: compute_lca_eq_class_weights.py  evaluate_lgdnet.py  preprocess_lca_eq.py  train.py
src/lgdnet/: __init__.py  losses.py  metrics.py
src/lgdnet/data/: __init__.py  dataset.py
src/lgdnet/models/: __init__.py  lgdnet.py  lsgm.py
tests/: test_lgdnet.py
