[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lgdnet-lca-eq"
version = "0.1.0"
description = "Land-cover-conditioned earthquake damage assessment with LGDNet."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "LGDNet contributors" }
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.0",
  "pyyaml>=6.0",
  "torch>=2.0",
  "torchvision>=0.15"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
