[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lgdnet-lca-eq"
version = "1.0.0"
description = "Official PyTorch implementation of LGDNet for LCA-EQ."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "LGDNet contributors" }
]
dependencies = [
  "numpy>=1.23",
  "pillow>=9.0",
  "pyyaml>=6.0",
  "torch==2.7.1",
  "torchvision==0.22.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
